[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assests/Player/Meele/4.png" type="Texture" id=1]
[ext_resource path="res://Assests/Player/Meele/5.png" type="Texture" id=2]
[ext_resource path="res://Assests/Player/Meele/7.png" type="Texture" id=3]
[ext_resource path="res://Assests/Player/Meele/6.png" type="Texture" id=4]
[ext_resource path="res://Assests/Player/Meele/1.png" type="Texture" id=5]
[ext_resource path="res://Assests/Player/Meele/2.png" type="Texture" id=6]
[ext_resource path="res://Assests/Player/Meele/3.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Meele.gd" type="Script" id=8]
[ext_resource path="res://Assests/Audio/PUNCH_SQUELCH_HEAVY_05.wav" type="AudioStream" id=10]
[ext_resource path="res://Assests/Audio/PUNCH_SQUELCH_HEAVY_01.wav" type="AudioStream" id=11]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=12]
[ext_resource path="res://Assests/Audio/PUNCH_CLEAN_HEAVY_10.wav" type="AudioStream" id=13]
[ext_resource path="res://Assests/Audio/PUNCH_DESIGNED_HEAVY_23.wav" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Meele1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.131427, 0.149234, 0.173408 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Meele2"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Area2D:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 77.5, 43.5 )

[node name="Meele" type="Node2D"]
script = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/Meele1 = SubResource( 1 )
anims/Meele2 = SubResource( 5 )
anims/RESET = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 89, 1 )
rotation = -1.5708
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastPos" type="Node2D" parent="."]
position = Vector2( -215, 1 )

[node name="RayCastPos2" type="Node2D" parent="."]
position = Vector2( 366, -1 )

[node name="Area2D" type="Area2D" parent="." groups=["bulDont", "hitBox"]]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["hitBox"]]
position = Vector2( -0.5, 15.5 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Meele2Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="Meele1Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 12 )
samples = [ ExtResource( 11 ), ExtResource( 10 ) ]

[node name="Timer2" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
